# spectral_ssm

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  check_data.py  loss_landscape-2024-07-30-13-59-41.vts  predict.py  predict_stu_iter.py  predict_stu_test.py  prune_data.py  pyproject.toml  requirements.txt  requirements2.txt  requirements_jax.txt  setup.py  training_details_hybrid_2024-07-11-13-34-39.txt  training_details_hybrid_2024-07-13-15-34-57.txt  training_details_hybrid_2024-07-13-15-36-24.txt  training_details_hybrid_2024-07-13-15-38-37.txt  training_details_hybrid_2024-07-13-15-39-39.txt  training_details_mamba2_2024-07-09-01-42-48.txt  training_details_mamba2_2024-07-09-01-44-59.txt  training_details_mamba2_2024-07-09-01-56-24.txt  training_details_mamba2_2024-07-09-01-57-36.txt  training_details_mamba2_2024-07-11-13-43-55.txt  training_details_mamba2_2024-07-11-18-32-12.txt  training_details_mamba2_2024-07-11-18-35-48.txt  training_details_mamba2_2024-07-11-18-36-42.txt  training_details_mamba2_2024-07-11-18-41-35.txt  training_details_mamba2_2024-07-13-15-14-53.txt  training_details_mamba2_2024-07-13-15-18-07.txt  training_details_mamba2_2024-07-13-15-23-10.txt  training_details_mamba2_2024-07-13-15-49-08.txt  training_details_mamba2_2024-07-13-16-47-40.txt  training_details_sssm_2024-06-28-15-02-46.txt  training_details_sssm_2024-06-28-15-29-15.txt  training_details_sssm_2024-06-28-15-40-11.txt  training_details_sssm_2024-06-28-15-44-42.txt  training_details_sssm_2024-06-28-15-48-39.txt  (+84 more)
benchmarks/: benchmark.py  check.py  hybrid.py  mamba.py  stu.py  stu2.py  synthetic.py  transformer.py
gymnasium/: test.py
landscapes/: loss_landscape-2024-07-30-13-56-54.vts  loss_landscape-2024-07-30-14-54-47.vts  loss_landscape-2024-07-30-14-56-27.vts  loss_landscape-2024-07-30-15-14-45.vts  loss_landscape-2024-07-30-15-21-26.vts  loss_landscape-2024-07-30-15-51-40.vts  loss_landscape-2024-07-30-15-53-22.vts  loss_landscape-2024-07-30-17-04-51.vts  loss_landscape-2024-08-29-04-07-10.vts  loss_landscape-2024-08-29-04-32-45.vts  loss_landscape-2024-08-29-04-55-26.vts  loss_landscape-2024-08-29-06-23-26.vts  loss_landscape-2024-08-29-07-14-45.vts  loss_landscape-2024-08-29-08-05-58.vts  loss_landscape-2024-08-29-10-01-05.vts
losses/: __init__.py  loss_ant.py  loss_cartpole.py  loss_cheetah.py  loss_walker.py
utils/: eda.py  (+24 more)
(+444 files in other folders)
